CHANGES-1.2.txt
---------------

CHANGES IN CUPS V1.2.3

	- HTTP headers were not buffered (STR #1899)
	- Some IPP printers (HP) did not like UTF-8 job names
	  (STR #1837)
	- The CUPS desktop icon is now localized for Polish (STR
	  #1920)
	- Printer options were not always honored when printing
	  from Windows clients (STR #1839)
	- The openssl command would lock up the scheduler when
	  generating an encryption certificate on some platforms
	  due to a lack of entropy for the random number
	  generator (STR #1876)
	- The web admin page did not recognize that "Listen 631"
	  enabled remote access (STR #1908)
	- The web admin page did not check whether changes were
	  made to the Basic Server Settings check boxes (STR
	  #1908)
	- The IPP backend could generate N*N copies in certain
	  edge cases.
	- The scheduler did not restore remote printers properly
	  when BrowseShortNames was enabled (STR #1893)
	- Polling did not handle changes to the network
	  environment on Mac OS X (STR #1896)
	- The "make test" subscription tests used invalid
	  notify-recipient-uri values (STR #1910)
	- Printers could be left in an undefined state on system
	  sleep (STR #1905)
	- The Berkeley and System V commands did not always use
	  the expected character set (STR #1915)
	- Remote printing fixes (STR #1881)
	- The cupstestppd utility did not validate translation
	  strings for custom options properly.
	- Multi-language PPD files were not properly localized in
	  the web interface (STR #1913)
	- The admin page's simple settings options did not check
	  for local domain socket or IPv6 addresses and did not
	  use "localhost" as the listen address.
	- An empty BrowseProtocols, BrowseLocalProtocols, or
	  BrowseRemoteProtocols line would crash the scheduler
	  instead of disabling the corresponding browsing options.
	- The scheduler now logs IPP operation status as debug
	  messages instead of info or error.
	- cupsFileRewind() didn't clear the end-of-file state.