@@ -3,6 +3,9 @@ CHANGES-1.2.txt
 
 CHANGES IN CUPS V1.2.3
 
+	- Fixed a problem with ippPort() not using the port
+	  number that was set via the client.conf file or
+	  CUPS_SERVER environment variable.
 	- HTTP headers were not buffered (STR #1899)
 	- Some IPP printers (HP) did not like UTF-8 job names
 	  (STR #1837)
